--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  dio: ^5.1.0
+  cupertino_icons: 1.0.5
+  dio: 5.1.0
+  freezed_annotation: 2.0.3
+  flutter_bloc: 8.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  build_runner: 2.1.11
+  flutter_lints: 2.0.1
+  freezed: 2.0.3
+  fake_async: 1.3.0
 
 flutter:
   uses-material-design: true
