--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: 5.1.0
   freezed_annotation: 2.0.3
   flutter_bloc: 8.1.1
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_lints: 2.0.1
   freezed: 2.0.3
   fake_async: 1.3.0
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
