--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: 1.0.5
+  cached_network_image: 3.2.1
   dio: 5.1.0
   freezed_annotation: 2.0.3
   flutter_bloc: 8.1.1
