--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   freezed: 2.0.3
   fake_async: 1.3.0
   json_serializable: ^6.5.4
+  mocktail: 0.2.0
 
 flutter:
   uses-material-design: true
