--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,27 +5,27 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: 1.0.5
-  cached_network_image: 3.2.1
-  dio: 5.1.0
-  freezed_annotation: 2.0.3
-  flutter_bloc: 8.1.1
-  json_annotation: ^4.7.0
+  cached_network_image: 3.2.3
+  dio: 5.1.1
+  freezed_annotation: 2.2.0
+  flutter_bloc: 8.1.2
+  json_annotation: 4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 2.1.11
+  build_runner: 2.3.3
   flutter_lints: 2.0.1
-  freezed: 2.0.3
-  fake_async: 1.3.0
-  json_serializable: ^6.5.4
-  mocktail: 0.2.0
+  freezed: 2.3.2
+  fake_async: 1.3.1
+  json_serializable: 6.6.1
+  mocktail: 0.3.0
 
 flutter:
   uses-material-design: true
